--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,78 @@
 @tailwind components;
 @tailwind utilities;
 
+.artist{
+    background-color: #00000000;
+
+}
+.text-area{
+    background-color: rgba(0, 0, 0, 0.568);
+}
+
+.fill {
+    width: full;
+    height: 10ch;
+}
+
+sbutton {
+    background-color: gray !important;
+    border: 4px solid white;
+    padding: 20px;
+    border-radius: 3px;
+    margin-top: 1em;  
+}
+
+.sbutton {
+    background-color: gray !important;
+    border: 4px solid white;
+    padding: 21px;
+    border-radius: 3px;
+}
+
+.sbutton:hover {
+    background-color: red !important;
+    border: 4px solid gray;
+    padding: 25px;
+    border-radius: 3px;
+}
+
+sbutton:hover {
+    background-color: red !important;
+    padding: 24px;
+    border-radius: 3px;
+}
+
+.gallery__img{
+    padding-top: 2em;
+    padding-bottom: 5em;
+}
+
+.gallery__img:hover {
+    
+    background-color: rgba(255, 0, 0, 0.705);
+}
+
+.showfeats {
+    z-index: 1;
+    height: 19em;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    display: flex;
+    font-size: 3em;
+    text-shadow: -1px 1px 2px #000,
+                  1px 1px 0 #000,
+                  1px -1px 0 #000,
+                  -1px -1px 0 #000;
+}
+
+.background {
+    z-index: -1;
+    width: 100%;
+    position: fixed;
+    margin-top: -100px;
+}
+
 .artist-header {
     background-color: black;
     color: white;
@@ -64,6 +136,61 @@ th {
 
 .cell {
     size: 1em;
+}
+
+footer {
+    margin-bottom: 0;
+}
+
+.bottom {
+    background-color: rgb(129, 27, 27);
+    color: white;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    padding-top: 20px;
+    
+    justify-content: space-evenly;
+}
+
+.map{
+    width: 500px;
+    padding: 2%;
+    padding-left: 100px;
+}
+
+.maping {
+    width: 500px;
+    
+}
+
+.footinfo{
+    display: flex;
+    flex-direction: column;
+    width: 25%;
+    font: .6em;
+}
+
+.footshows{
+    display: flex;
+    flex-direction: column;
+    width: 25%;
+    font: .6em;
+}
+
+.social {
+    display: flex;
+    flex-direction: column;
+    width: 25%;
+    font: .6em;
+}
+
+.foothead {
+    font-size: 2em;
+}
+
+.tiny{
+    margin: 10px;
 }
 
 /* *{
